--- a/templates/ficha_contacto.html.twig
+++ b/templates/ficha_contacto.html.twig
@@ -3,12 +3,8 @@
 <meta charset="utf-8">
 <body>
     <h1>Ficha del contacto</h1>
-    {%if contacto%}
-    <ul>
-        <li><strong>{{ contacto.nombre}}</strong></li>
-        <li><strong>Teléfono: </strong>{{ contacto.telefono}}</li>
-        <li><strong>Correo: </strong>{{ contacto.email}}</li>
-    </ul>
+    {% if contacto %}
+        {{ include ('partials/datos_contacto.html.twig', {'contacto': contacto})}}
     {% else %}
         <p>Contacto no encontrado</p>
     {% endif %}
