--- a/templates/ficha_contacto.html.twig
+++ b/templates/ficha_contacto.html.twig
@@ -1,12 +1,10 @@
-<!doctype html>
-<html>
-<meta charset="utf-8">
-<body>
+{% extends "base.html.twig" %}
+{% block title %}Contactos{% endblock %}
+{% block body %}
     <h1>Ficha del contacto</h1>
     {% if contacto %}
-        {{ include ('partials/datos_contacto.html.twig', {'contacto': contacto})}}
+        {{ include ("partials/datos_contacto.html.twig", { "contacto": contacto}) }}
     {% else %}
-        <p>Contacto no encontrado</p>
+        <p>Contacto {{ contacto.id }} no encontrado</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
