--- a/templates/lista_contactos.html.twig
+++ b/templates/lista_contactos.html.twig
@@ -1,14 +1,12 @@
-<!doctype html>
-<html>
-<meta charset="utf-8">
-<body>
+{% extends "base.html.twig" %}
+{% block title %}Contactos{% endblock %}
+{% block body %}
     <h1>Listado de contactos</h1>
     {% if contactos %}
-        {% for contacto in contactos%}
-                {{ include ('partials/datos_contacto.html.twig', {'contacto': contacto})}}
+        {% for contacto in contactos %}
+            {{ include ("partials/datos_contacto.html.twig", { "contacto": contacto}) }}
         {% endfor %}
     {% else %}
-        <p>No se han encontrado contactos</p>
+        <p>Contacto {{ contacto.id }} no encontrado</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
